@@ -5,9 +5,9 @@
 # Author          : Ulrich Pfeifer
 # Created On      : Sun Jul 12 22:31:12 1998
 # Last Modified By: Ulrich Pfeifer
-# Last Modified On: Sun Jul 26 16:15:18 1998
+# Last Modified On: Sun Jul 12 22:36:21 1998
 # Language        : CPerl
-# Update Count    : 6
+# Update Count    : 5
 # Status          : Unknown, Use with caution!
 # 
 # (C) Copyright 1998, Ulrich Pfeifer, all rights reserved.
@@ -32,12 +32,7 @@ $ENV{SERVER_PORT} = 8080;
 $ENV{SERVER_NAME} = 'the.good.ship.lollypop.com';
 
 while (<DATA>) {
-  my $orig = eval "CGI::$_";
-  my $now  = eval $_;
-  if ($orig ne $now) {
-    print "Testing $_ failed: '$orig' ne '$now'\n";
-    print "not ";
-  }
+  print "not " if eval "CGI::$_ ne $_";
   print 'ok ', $.+1, "\n";
 }
 __DATA__
